--- a/src/index.html
+++ b/src/index.html
@@ -21,11 +21,11 @@
       Enter your life expectancy in Earth years:
     </label>
     <input id="expect" class="form-control" type="number" style="max-width: 40%;">
-    <button onclick="" id="mercury" type="click" class="btn btn-info ">Mercury</button>
-    <button onclick="" id="venus" type="click" class="btn btn-success">Venus</button>
-    <button onclick="" id="mars" type="click" class="btn btn-danger">Mars</button>
-    <button onclick="" id="jupiter" type="click" class="btn btn-warning">Jupiter</button>
+    <button  id="mercury" type="click" class="btn btn-info ">Mercury</button>
+    <button  id="venus" type="click" class="btn btn-success">Venus</button>
+    <button  id="mars" type="click" class="btn btn-danger">Mars</button>
+    <button  id="jupiter" type="click" class="btn btn-warning">Jupiter</button>
   </form>
-  
+
   </div>
 </html>
