Continue to troubleshoot this display issue

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <title>Planetary Age Converter</title>
 </head>
 
@@ -31,7 +30,9 @@
         </form>
       </div>
       <div class="col-md-6">
-        <h4 class="resultsWindow"><span class="results"></span></h4>
+        <h4 class="resultsWindow">
+          <span class="resultsDisplay"></span>
+        </h4>
       </div>
     </div>
   </div>
