--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,9 @@
         </form>
       </div>
       <div class="col-md-6">
-        <span class="resultsDisplay"></span>
+        <div class="resultsWindow">
+          <span class="resultsDisplay"></span>
+        </div>
       </div>
     </div>
   </div>
